--- a/themes/Rozier/static/css/panels/entries_panel/admin_entries.less
+++ b/themes/Rozier/static/css/panels/entries_panel/admin_entries.less
@@ -16,7 +16,7 @@
 #admin-menu {
     position: relative;
     background: #fff;
-    z-index:2;
+    z-index:5;
 
     .uk-nav {
         display: block;
